Fixed navbar on mobile

--- a/src/css/SoulsmileNavbar.css
+++ b/src/css/SoulsmileNavbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    height: 10vmin;
+    min-height: 10vmin;
     background-color: white;
 }
 
